[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Prefabs/TileMaps/HavenTileMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Scripts/Haven/TownGUI.gd" type="Script" id=2]
[ext_resource path="res://Assets/Prefabs/GUI/PlayerHUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Art/GUI/window_background.png" type="Texture" id=4]
[ext_resource path="res://Assets/Fonts/visitor1.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/Art/GUI/button.png" type="Texture" id=6]
[ext_resource path="res://Assets/Art/GUI/hud_background_bar.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]

size = 10
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 10
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 10
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=4]

size = 10
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Haven" type="Node2D" index="0"]

_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Camera2D" type="Camera2D" parent="." index="0"]

anchor_mode = 0
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[node name="Town" parent="." index="1" instance=ExtResource( 1 )]

[node name="GUI" type="Node2D" parent="." index="2"]

position = Vector2( 0, -10.2913 )
script = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="PlayerHUD" parent="GUI" index="0" instance=ExtResource( 3 )]

position = Vector2( 88.0634, 470.504 )
scale = Vector2( 2.3, 1.8 )

[node name="WindowBackground" type="TextureRect" parent="GUI" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 11.0
margin_top = 19.0
margin_right = 90.0
margin_bottom = 101.0
rect_scale = Vector2( 3, 4 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="MessageOfTheDay" type="RichTextLabel" parent="GUI/WindowBackground" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 3.0
margin_top = 2.0
margin_right = 132.0
margin_bottom = 104.0
rect_scale = Vector2( 0.6, 0.6 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = false
bbcode_text = "Welcome to Project Haven v0.25 You can only do random battles and train and level up right now! Touch or click below to get started!"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Welcome to Project Haven v0.25 You can only do random battles and train and level up right now! Touch or click below to get started!"
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "Rect", "custom_colors", "custom_fonts" ]

[node name="RandomBattleButton" type="TextureButton" parent="GUI/WindowBackground" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 14.0
margin_top = 50.0
margin_right = 62.0
margin_bottom = 70.0
rect_scale = Vector2( 1, 0.6 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="RandomBattleText" type="Label" parent="GUI/WindowBackground/RandomBattleButton" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -11.0
margin_top = 1.0
margin_right = 67.0
margin_bottom = 22.0
rect_scale = Vector2( 0.9, 0.9 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "Random Battle"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="TrainerButton" type="TextureButton" parent="GUI/WindowBackground" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 14.0
margin_top = 64.0
margin_right = 62.0
margin_bottom = 84.0
rect_scale = Vector2( 1, 0.6 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="TrainerText" type="Label" parent="GUI/WindowBackground/TrainerButton" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -4.0
margin_top = -1.0
margin_right = 57.0
margin_bottom = 22.0
rect_scale = Vector2( 0.9, 0.9 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "Go to Trainers"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Dev" type="Node2D" parent="GUI" index="2"]

[node name="DevButton" type="TextureButton" parent="GUI/Dev" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 579.0
margin_top = 423.0
margin_right = 627.0
margin_bottom = 463.0
rect_scale = Vector2( 2.8, 2.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Dev Stuff" type="Label" parent="GUI/Dev/DevButton" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 3.0
margin_top = 2.0
margin_right = 59.0
margin_bottom = 23.0
rect_scale = Vector2( 0.8, 1.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "Dev Stuff"
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="InputIDBackground" type="TextureRect" parent="GUI/Dev" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 331.0
margin_top = 184.0
margin_right = 540.0
margin_bottom = 398.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
expand = true
stretch_mode = 0

[node name="InputLabel" type="Label" parent="GUI/Dev/InputIDBackground" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 11.0
margin_top = 47.0
margin_right = 111.0
margin_bottom = 91.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Input Monster ID"
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="InputID" type="TextureRect" parent="GUI/Dev/InputIDBackground" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 14.0
margin_top = 100.0
margin_right = 196.0
margin_bottom = 133.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 7 )
expand = true
stretch_mode = 0

[node name="Input" type="LineEdit" parent="GUI/Dev/InputIDBackground/InputID" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 3.0
margin_top = 2.0
margin_right = 180.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0

[node name="OkayButton" type="TextureButton" parent="GUI/Dev/InputIDBackground" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 36.0
margin_top = 142.0
margin_right = 84.0
margin_bottom = 181.0
rect_scale = Vector2( 2.8, 2.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Submit" type="Label" parent="GUI/Dev/InputIDBackground/OkayButton" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 2.0
margin_right = 66.0
margin_bottom = 23.0
rect_scale = Vector2( 0.8, 1.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "Submit"
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[connection signal="pressed" from="GUI/WindowBackground/RandomBattleButton" to="GUI" method="_on_RandomBattleButton_pressed"]

[connection signal="pressed" from="GUI/WindowBackground/TrainerButton" to="GUI" method="_on_TrainerButton_pressed"]

[connection signal="pressed" from="GUI/Dev/DevButton" to="GUI" method="_on_DevButton_pressed"]

[connection signal="pressed" from="GUI/Dev/InputIDBackground/OkayButton" to="GUI" method="_on_OkayButton_pressed"]


